--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: Sync to Hugging Face hub
 on:
   push:
@@ -18,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://NaufalYP1:$HF_TOKEN@huggingface.co/spaces/NaufalYP1/brat main
+        run: git push https://HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/NaufalYP1/brat
