--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: Sync to Hugging Face hub
-
 on:
   push:
     branches: [main]
@@ -9,24 +8,22 @@ jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
           lfs: true
 
-      - name: Configure Git user
+      - name: Configure Git
         run: |
           git config --global user.email "action@github.com"
-          git config --global user.name  "GitHub Actions"
+          git config --global user.name "GitHub Actions"
 
-      - name: Push to Hugging Face Hub
+      - name: Push to Hugging Face Space
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_USERNAME: NaufalYP1                # <-- tambahkan variabel ini
         run: |
-          # Buang remote origin lama (jika ada)
-          git remote remove origin || true
-          # Tambahkan ulang remote origin dengan token (tanpa username)
-          git remote add origin https://$HF_TOKEN@huggingface.co/spaces/NaufalYP1/brat.git
-          # Push ke branch main dengan force
-          git push -f origin main
+          git push --force \
+            https://${HF_USERNAME}:${HF_TOKEN}@huggingface.co/spaces/${HF_USERNAME}/brat \
+            main
