--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
+// package.json
 {
   "name": "brat",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
+  "main": "app.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node app.js",
+    "vercel-build": "echo \"Building on Vercel\""
+  },
+  "engines": {
+    "node": ">=16.x"
+  },
   "dependencies": {
-    "axios": "^1.7.9",
+    "@ffmpeg/ffmpeg": "^0.11.6",
+    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "lru-cache": "^11.1.0",
     "morgan": "^1.10.0",
-    "playwright": "^1.49.1",
-    "lru-cache": "^11.1.0"
+    "playwright-core": "^1.49.1"
   }
 }
