--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "app.js",
-      "use": "@vercel/node"
-    }
+    { "src": "app.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/app.js"
-    }
+    { "src": "/(.*)", "dest": "/app.js" }
   ],
+  "functions": {
+    "app.js": {
+      "memory": 1024,
+      "maxDuration": 30
+    }
+  },
   "env": {
     "NODE_ENV": "production"
   }
