--- a/package.json
+++ b/package.json
@@ -3,21 +3,15 @@
   "version": "1.0.0",
   "type": "module",
   "main": "app.js",
-  "license": "MIT",
   "scripts": {
-    "start": "node app.js",
-    "vercel-build": "echo \"Building on Vercel\""
-  },
-  "engines": {
-    "node": ">=16.x"
+    "start": "node app.js"
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.11.6",
-    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "lru-cache": "^11.1.0",
     "morgan": "^1.10.0",
-    "playwright-core": "^1.49.1"
+    "playwright": "^1.49.1"
   }
 }
