--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "npx playwright install --with-deps"
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.11.6",
