--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/app.js" }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+    {
+      "src": "Dockerfile",
+      "use": "@vercel/docker"
+    }
+  ]
 }
